[package]
name = "zelda64"
version = "0.0.1"
authors = ["saneki <s@neki.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
clap = { version = "3.1", optional = true }
n64rom = { path = "../n64rom-rs" }
thiserror = "1.0"
yaz0 = "0.3"

[features]
zelda64tool = ["clap"]

[[bin]]
name = "zelda64tool"
path = "src/bin/zelda64tool.rs"
required-features = ["zelda64tool"]
